# eeg-ufal

./: .gitignore  .gitmodules  README.md  app.py  basic_csv_visualization.ipynb  csv_single_graphing.ipynb  data_preprocessing.py  data_preprocessing_visualization.ipynb  data_visualization.ipynb  plot_audio.ipynb  plot_gaze.ipynb  processor.py  pyproject.toml  split_audio.py
analysis/: qana.ipynb  qana.py
notebooks/: basic_csv_visualization.ipynb  csv_single_graphing.ipynb  data_preprocessing_visualization.ipynb  data_visualization.ipynb  plot_audio.ipynb  plot_gaze.ipynb
scripts/: split_audio.py
src/: data_preprocessing.py  file_loader.py  processor.py
