[tool.poetry]
name = "eeg-ufal"
version = "0.1.0"
description = ""
authors = ["Karel Vlk <=>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
braindecode = "^0.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
