[tool.poetry]
name = "eeg-ufal"
version = "0.1.0"
description = ""
authors = ["Karel Vlk <=>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
braindecode = "^0.8.1"
matplotlib = "^3.10.1"
streamlit = "^1.44.1"
pydub = "^0.25.1"
scipy = "^1.15.2"
numpy = "^2.2.4"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120